# sprig

./: .gitignore  .scalafmt.conf  LICENSE  README.md  TODO.md  build.sbt  devenv.nix  devenv.yaml  flake.nix  justfile
.github/workflows/: ci-ui.yml  ci.yml
clients/python/: pyproject.toml
clients/python/sprig/: basket.py
clients/python/sprig/client/: basket.py
docs/: design.md
examples/: README.md
examples/python-script/: example-python-usage.py
examples/python-script/example-data/: my-dataset.csv  my-updated-data.csv
examples/python-script/sprigs/: demo-sprig.sprig  my-new-sprig.sprig
project/: plugins.sbt
sprig-py/: README.md  pyproject.toml
sprig-py/examples/: example-python-usage.py
sprig-py/sprig/: client.py  model.py  poc.py
sprig-py/sprig/app/: access.py  cli.py  io.py  repo.py  storage.py
sprig-py/sprig/client/: basket.py
sprig-py/sprigs/: demo-sprig.sprig  my-updated-sprig.sprig
src/: Cargo.toml  pyproject.toml
src-new/: Cargo.toml
src-new/sprigs/: example.sprig
src-new/src/: io.rs  main.rs  model.rs
src-new/src/io/: sql.rs
src/main/protobuf/: sprig.proto
src/main/scala/: Main.scala
src/sprig/: model.py
src/sprig/app/: cli.py  io.py  repo.py  storage.py
src/sprigs/: test.sprig
src/src/: basket.rs  io.rs  main.rs  model.rs
src/tests/: test_io.py
ui/: .metadata  README.md  pubspec.yaml
ui/linux/: CMakeLists.txt  my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/sprig_ui/: README.md  pubspec.yaml
ui/sprig_ui/android/app/: build.gradle
ui/sprig_ui/android/app/src/main/: AndroidManifest.xml
ui/sprig_ui/android/app/src/main/kotlin/com/example/sprig_ui/: MainActivity.kt
ui/sprig_ui/grammars/: python.json
ui/sprig_ui/ios/Runner/: Info.plist
ui/sprig_ui/ios/Runner.xcodeproj/: project.pbxproj
ui/sprig_ui/lib/: main.dart  model.dart  model.freezed.dart  model.g.dart  repo.dart
ui/sprig_ui/lib/screens/: home.dart
ui/sprig_ui/lib/utils/: settings.dart  settings.g.dart
ui/sprig_ui/lib/widgets/: basket.dart  footer.dart  split.dart  sprig_details_card.dart  sprig_details_panel.dart  sprig_list.dart  sprig_usage.dart
ui/sprig_ui/linux/: CMakeLists.txt  my_application.cc
ui/sprig_ui/macos/Runner.xcodeproj/: project.pbxproj
ui/sprig_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/sprig_ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/sprig_ui/sprigs/: demo-sprig.sprig  my-new-sprig.sprig
ui/sprig_ui/test/: sprig_details_card_test.dart  widget_test.dart
ui/sprig_ui/web/: index.html  manifest.json
ui/sprig_ui/windows/: CMakeLists.txt
ui/sprig_ui/windows/runner/: Runner.rc  main.cpp
ui/test/: widget_test.dart
