[tool.poetry]
name = "sprig-py"
version = "0.0.1"
description = "Python client to sprig"
authors = ["Dorran Howell <dorran.howell@gmail.com>"]
readme = "README.md"
packages = [{include = "sprig_py"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.54.2"
protobuf = "^4.23.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
hypothesis = "^6.75.3"
fawltydeps = "^0.11.0"
pyright = "^1.1.308"
#grpcio-tools = "^1.54.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
