[package]
name = "sprig-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for managing sprigs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"
serde_json = "1.0.117"
