[package]
name = "sprig-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for managing sprigs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "52.0.0"
arrow-csv = "52.0.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-graceful-shutdown = "0.15.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
